fix mobile text container overflow

--- a/client/styles.css
+++ b/client/styles.css
@@ -229,12 +229,12 @@ h1 {
     -webkit-transform: translate(-50%, -100%);
     -moz-transform: translate(-50%, -100%);
     width: 100%;
-    overflow-x: auto;
   }
 
   .modal-container.visible {
+    bottom: 100px;
     height: 100%;
-    overflow-y: scroll;
+    overflow: scroll;
   }
 
   .modal-img {
@@ -244,6 +244,8 @@ h1 {
 
   .content-container {
     width: 100%;
+    height: 450px;
+    bottom: 100px;
     padding: 10px;
     margin: 0 auto;
     text-align: left;
